style: apply global CSS reset for consistent layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Library</title>
 </head>
 <body>
+
+    <header>
+        <h1>My Library</h1>
+        <p><em>Want to add a book to my library? Fill out this form.</em></p>
+        <button class="btn btnDisplayForm">Add a Book</button>
+    </header>
+
     
 </body>
 </html>
