feat: add book display grid layout with styling
- Created a .grid-container with a responsive CSS Grid layout
- Designed individual .item cards to display book details
- Included book icon images and styled for visual consistency
- Added padding, spacing, and styling to enhance readability and structure

--- a/index.html
+++ b/index.html
@@ -48,7 +48,38 @@
                    checked />
             <label for="hasRead-false" class="radio-label">No</label>
         </fieldset>
+
+        <p class="form-row">
+            <button type="submit">Add Book</button>
+        </p>
     </form>
+
+    <div class="grid-container">
+        <div class="item">
+            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
+            <p>
+                Title: <span class="title"></span><br>
+                Author: <span class="author"></span><br>
+                Pages: <span class="pages"></span>
+            </p>
+        </div>
+        <div class="item">
+            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
+            <p>
+                Title: <span class="title"></span><br>
+                Author: <span class="author"></span><br>
+                Pages: <span class="pages"></span>
+            </p>
+        </div>
+        <div class="item">
+            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
+            <p>
+                Title: <span class="title"></span><br>
+                Author: <span class="author"></span><br>
+                Pages: <span class="pages"></span>
+            </p>
+        </div>
+    </div>
     
 </body>
 </html>
