--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js" type="text/javascript"></script>
+    <script src="script.js" defer></script>
     <title>Library</title>
 </head>
 <body>
@@ -55,30 +55,7 @@
     </form>
 
     <div class="grid-container">
-        <div class="item">
-            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
-            <p>
-                Title: <span class="title"></span><br>
-                Author: <span class="author"></span><br>
-                Pages: <span class="pages"></span>
-            </p>
-        </div>
-        <div class="item">
-            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
-            <p>
-                Title: <span class="title"></span><br>
-                Author: <span class="author"></span><br>
-                Pages: <span class="pages"></span>
-            </p>
-        </div>
-        <div class="item">
-            <img src="./images/book-open-svgrepo-com.svg" alt="book_icon">
-            <p>
-                Title: <span class="title"></span><br>
-                Author: <span class="author"></span><br>
-                Pages: <span class="pages"></span>
-            </p>
-        </div>
+       
     </div>
     
 </body>
