feat: add dynamic book creation from modal form
- Introduced Book constructor with UUID generation
- Implemented addBookToLibrary and render methods for dynamic display
- Handled form submission to create and render new book entries
- Added delete functionality with DOM and library update
- Initialized library with sample books

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 <label for="title">Title</label>
                 <input id="title"
                        name="title"
-                       type="text" />
+                       type="text" required />
             </p>
             <p class="form-row">
                 <label for="author">Author</label>
                 <input id="author"
                        name="author"
-                       type="text" />
+                       type="text" required/>
             </p>
             <p class="form-row">
                 <label for="pages">Pages</label>
                 <input id="pages"
                        name="pages"
-                       type="number" />
+                       type="number" required/>
             </p>
             <fieldset>
                 <legend>I have read this book:</legend>
